--- a/css/style.scss
+++ b/css/style.scss
@@ -22,6 +22,7 @@ body {
 
 .block {
     padding: 30px 0;
+    display: none;
     &:nth-child(even) {
         background: #400040;
         color: #fff;
