--- a/css/style.scss
+++ b/css/style.scss
@@ -8,16 +8,20 @@ a {
     text-decoration: none;
 }
 
-h1 {
+h1,
+h2 {
     text-align: center;
+    font-size: 2rem;
 }
 
 body {
     font-size: 15px;
+    font-weight: 400;
+    font-family: Arial, Helvetica, sans-serif
 }
 
 .main-container {
-    padding: 0 20px;
+    padding: 0 25px;
 }
 
 .block {
