--- a/css/style.scss
+++ b/css/style.scss
@@ -38,7 +38,13 @@ body {
     ol {
         li {
             &+li {
-                margin-top: 10px;
+                margin-top: 30px;
+            }
+            p {
+                &:first-child {
+                    font-weight: 700;
+                    font-size: 1.5rem;
+                }
             }
         }
     }
